--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -23,12 +23,14 @@ repositories {
 }
 
 dependencies {
+	implementation 'com.oracle.ojdbc:orai18n:19.3.0.0'
   implementation 'javax.servlet:javax.servlet-api:4.0.1'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
   implementation 'com.zaxxer:HikariCP:5.1.0'
   implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
+	implementation 'com.google.code.gson:gson:2.9.0'
   runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
   compileOnly 'org.projectlombok:lombok'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
